fix: dark mode toggle uses button as expected

--- a/src/styles/cyan-color-theme-vars.sass
+++ b/src/styles/cyan-color-theme-vars.sass
@@ -125,6 +125,16 @@
   .cyan--mode--dark
     --cyan-background-color: #002337
 
+    // Code
+    --cyan-code-color: var(--chroma-secondary-h)
+    --cyan-code-background-color: var(--chroma-secondary-c)
+
+    // Button, text
+    --cyan-button-text-background-color-hover: var(--chroma-secondary-c)
+    --cyan-button-text-background-color-active: var(--chroma-primary-c)
+    --cyan-button-text-background-color-disabled: var(--chroma-secondary-b)
+    --cyan-button-text-color-disabled: var(--chroma-secondary-d)
+
     // Bubbles
     --cyan-bubble-background-color-a: rgba(155, 221, 77, 0.4)
     --cyan-bubble-background-color-b: rgba(155, 221, 77, 0.2)
